[project]
name = "computer-vision-reba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.35",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
